force-app/main/default/objects/animalos__Indemnity_Waiver__c/animalos__Indemnity_Waiver__c.object-meta.xml
<CustomObject>
    <label>Indemnity Waiver</label>
    <nameField>
        <label>Indemnity Waiver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indemnity Waivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>