force-app/main/default/objects/animalos__Indemnity_Waiver__c/fields/animalos__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>