force-app/main/default/objects/animalos__Indemnity_Waiver__c/fields/aos_Requires_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>aos_Requires_Additional_Information__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>Indicates if the Indemnity Waiver requires additional information to be entered.</description>
    <inlineHelpText>Does the Indemnity Waiver require additional information to be entered</inlineHelpText>
    <label>Requires Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>