force-app/main/default/objects/animalos__Indemnity_Waiver__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>animalos__Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>